[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
alloy = { version = "0.3.3", features = ["full"] }
colored = "2.1.0"
eyre = "0.6.12"
futures = "0.3.30"
rand = "0.8.5"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
uuid = { version = "1.3.0", features = ["v4"] }
warp = "0.3.7"

